--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <html lang="en">
 <head>
-  <title>Peter To</title>
+  <title>🤓 Peter To</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
