--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="row">
 
         <!-- Entries Column -->
-        <div class="col-md-8" style="height: 80vh;">
+        <div class="col-md-8">
           <h2 style="text-align: center;">
             <span style="font-weight: bold;">About Me</span>
           </h2>            
